# fixathon26

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  GCS_SETUP.md  README.md  aggregate_results.py  batch_scraper.py  docker-compose.yml  download_articles.py  process_articles.py  process_articles_fast.py  pubmed_scraper.py  pyproject.toml  test_one_article.py  test_parallel.py
data-pipeline/: .env.example  .gitignore  README.md  SUMMARY.md  check_processed.py  cleanup_bad_summaries.sh  download_articles.py  process_articles_parallel.py  pubmed_scraper.py  pyproject.toml  test_claude_api.py  upload_to_gcs.py  validate_molecules.py  validate_molecules_in_xml.py  verify_and_fix_summaries.py
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: config.py  main.py
src/backend/app/api/: chat.py  molecules.py  research.py  summaries.py
src/backend/app/db/: __init__.py  session.py
src/backend/app/db/migrations/: env.py
src/backend/app/db/migrations/versions/: 001_initial_schema.py
src/backend/app/models/: __init__.py  molecule.py  molecule_paper_link.py  paper_summary.py  research_run.py  research_run_molecule.py
src/backend/app/schemas/: __init__.py  chat.py  molecule.py  paper.py  research.py
src/backend/app/services/: chat.py  embedding.py  extraction.py  pubmed.py  rag.py  research.py
src/frontend/: Dockerfile  package.json  pnpm-lock.yaml
src/frontend/app/: layout.tsx  page.tsx
src/frontend/components/: providers.tsx
src/frontend/hooks/: useChat.ts  useResearchRun.ts
src/frontend/services/: api.ts  chat.ts  research.ts
(+13 files in other folders)
